<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="25dp"
        android:textAlignment="center"
        android:id="@+id/tv"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="Personal Account Registration"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/first_name"
        android:hint="@string/prompt_fname"
        android:inputType="text"
        android:layout_below="@id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:hint="@string/prompt_lname"
        android:layout_below="@id/first_name"
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_below="@id/last_name"
        android:hint="@string/prompt_email"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_below="@id/email"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/age"
        android:layout_below="@id/password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>


    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_below="@id/password"
        android:layout_toEndOf="@id/age"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/age"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>



    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:text="@string/prompt_hooby"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/txt"
        android:layout_below="@id/radioSex"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        android:columnCount="2">

        <CheckBox
            android:id="@+id/foot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footbal" />

        <CheckBox
            android:id="@+id/bask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/basketball" />

        <CheckBox
            android:id="@+id/skii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skiing" />

        <CheckBox
            android:id="@+id/game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game" />


    </GridLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</RelativeLayout>